feat: adapt content to qupaya

--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
             href="https://twitter.com/_der_markusende"
             target="_blank"
           >
-            <span class="link__icon fab fa-twitter"></span>
+            <span class="fab fa-twitter"></span>
             <span class="link__text">Twitter</span>
+          </a>
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/markus-ende/"
+            target="_blank"
+          >
+            <span class="fab fa-linkedin"></span>
+            <span class="link__text">LinkedIn</span>
           </a>
           <a
             class="link"
@@ -33,8 +41,12 @@
             <span class="fab fa-xing"></span>
             <span class="link__text">Xing</span>
           </a>
+          <a class="link" href="https://www.qupaya.com/blog/">
+            <img class="link__svgicon" src="assets/qupaya-logo.svg" alt="" />
+            <span class="link__text">Blog</span>
+          </a>
           <a class="link" href="mailto:kontakt@markusende.de">
-            <span class="link__icon fas fa-envelope"></span>
+            <span class="fas fa-envelope"></span>
             <span class="link__text">E-Mail</span>
           </a>
         </nav>
@@ -46,9 +58,12 @@
 
           <section class="introduction">
             <p>
-              Hi! Ich heiße Markus Ende und bin freiberuflicher Informatiker
-              (M.Sc.), leidenschaftlicher Entwickler, Berater und Trainer. Zur
-              Zeit arbeite ich gerne vor allem im Frontend-Bereich mit Angular.
+              Hallo! Ich heiße Markus Ende und bin leidenschaftlicher
+              Entwickler, Berater und Trainer. Bis Ende 2019 war ich
+              freiberuflich tätig, bevor ich die
+              <a href="https://www.qupaya.com/">qupaya technologies GmbH</a>
+              mitgründete. Zur Zeit arbeite ich gerne vor allem im
+              Frontend-Bereich mit Angular.
             </p>
             <p>
               Da ich Angular bereits seit der ersten Stunde professionell
@@ -60,20 +75,21 @@
             </p>
             <p>
               Als Allrounder kenne ich mich auch unterhalb der
-              REST-Schnittstelle gut aus und unterstütze auch gerne mal bei der
-              Entwickelung der Backend-Services. Egal ob Front- oder Backend,
-              Codequalität und Testing ist mir immer besonders wichtig. Bei der
-              kompletten Kette von Unit- über Integrations- und
+              REST-Schnittstelle gut aus und unterstütze gerne bei der
+              Konzeption und Entwicklung des Backends. Egal ob in welchem
+              Bereich, Codequalität und Testing ist mir immer besonders wichtig.
+              Bei der kompletten Kette von Unit- über Integrations- und
               Schnittstellentests bis hin zu End-to-end-Tests kann ich Sie gerne
               unterstützen.
             </p>
             <p>
-              Ich bin ständig auf der Suche nach neuen spannenden Projekten im
-              Raum Erlangen/Nürnberg/Fürth oder remote im Home Office und würde
-              mich freuen, wenn Sie mir eine Nachricht schreiben würden. Gerne
-              auch Anfragen für mehrtägige Workshops, die ich in Kooperation mit
-              <a href="https://workshops.de/">workshops.de</a> in ganz
-              Deutschland anbiete.
+              Ich bin ständig auf der Suche nach neuen Kontakten und spannenden
+              Projekten im Raum Erlangen/Nürnberg/Fürth oder remote im Home
+              Office und würde mich freuen, wenn Sie mir
+              <a href="mailto:kontakt@markusende.de"
+                >eine Nachricht schreiben</a
+              >
+              würden.
             </p>
           </section>
         </section>
