feat: remove blank link target & add meta info

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <title>Markus Ende</title>
+    <meta name="author" content="Markus Ende" />
+    <meta
+      name="description"
+      content="Trainer & Softwareentwickler Angular / Full Stack"
+    />
+    <meta property="og:title" content="Markus Ende" />
+    <meta
+      property="og:description"
+      content="Trainer & Softwareentwickler Angular / Full Stack"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://markusende.de/assets/me-xs.jpg"
+    />
+    <meta property="og:url" content="https://markusende.de/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="/assets/fonts/fontawesome/css/fontawesome-all.min.css"
@@ -17,32 +33,24 @@
     <div class="wrapper">
       <header class="header">
         <nav class="links">
-          <a
-            class="link"
-            href="https://twitter.com/_der_markusende"
-            target="_blank"
-          >
+          <a class="link" href="https://twitter.com/_der_markusende">
             <span class="fab fa-twitter"></span>
             <span class="link__text">Twitter</span>
           </a>
-          <a
-            class="link"
-            href="https://www.linkedin.com/in/markus-ende/"
-            target="_blank"
-          >
+          <a class="link" href="https://www.linkedin.com/in/markus-ende/">
             <span class="fab fa-linkedin"></span>
             <span class="link__text">LinkedIn</span>
           </a>
-          <a
-            class="link"
-            href="https://www.xing.com/profile/Markus_Ende"
-            target="_blank"
-          >
+          <a class="link" href="https://www.xing.com/profile/Markus_Ende">
             <span class="fab fa-xing"></span>
             <span class="link__text">Xing</span>
           </a>
           <a class="link" href="https://www.qupaya.com/blog/">
-            <img class="link__svgicon" src="assets/qupaya-logo.svg" alt="" />
+            <img
+              class="link__svgicon"
+              src="assets/qupaya-logo.svg"
+              alt="qupaya logo"
+            />
             <span class="link__text">Blog</span>
           </a>
           <a class="link" href="mailto:kontakt@markusende.de">
